# research

./: SKILL.md
agent/: concepts.md  repl.md
agent-exec/: README.md  agent_exec_env.py  agent_textual.py  agent_tools.py  example_agent_app.py
clang-to-sqlite/: agent_functions.py  agent_functions_design.md  extractor.py  extractor_design.md  schema.sql
confluence-extraction/: .env.example  .gitignore  ARCHITECTURE.md  PHASE2.md  README.md  USAGE.md  pyproject.toml  setup.sh
confluence-extraction/src/confluence_extraction/: __init__.py  cli.py  config.py
confluence-extraction/src/confluence_extraction/api/: __init__.py  client.py
confluence-extraction/src/confluence_extraction/categorization/: __init__.py  categorizer.py
confluence-extraction/src/confluence_extraction/extraction/: __init__.py  orchestrator.py
confluence-extraction/src/confluence_extraction/models/: __init__.py  category.py  outputs.py  page.py  skill.py
confluence-extraction/src/confluence_extraction/outputs/: __init__.py  generator.py
confluence-extraction/src/confluence_extraction/synthesis/: orchestrator.py  skill_writer.py  synthesizer.py
confluence-extraction/src/confluence_extraction/validation/: __init__.py  validator.py
confluence-extraction/tests/: __init__.py  test_models.py
llm-chat/: README.md  download-deps.sh  index.html
llm-chat/js/: app.js
pyside6-llm-gui/: README.md  chat_app.py  config_example.py  requirements.txt  run.sh
references/: schema.md
scripts/: export_from_server.sh  export_with_pyghidra.py  query_firmware.py
streaming-chat/: requirements.txt  (+2 more)
(+2 files in other folders)
